Fix: align

--- a/receitas/css/receitasStyle.css
+++ b/receitas/css/receitasStyle.css
@@ -128,7 +128,6 @@ nav a:focus {
     color: white;
     font-family: "Pixelify Sans", sans-serif;
     margin-bottom: 10px;
-    text-align: center;
 }
 
 .info h3 {
